; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/charmap/extr_map.c_MoveLargeCell.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/charmap/extr_map.c_MoveLargeCell.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_9__ = type { i32, i32, i32, %struct.TYPE_7__* }
%struct.TYPE_7__ = type { i32 }
%struct.TYPE_8__ = type { i64, i64, i64, i64 }

@XLARGE = common dso_local global i64 0, align 8
@XCELLS = common dso_local global i64 0, align 8
@YLARGE = common dso_local global i64 0, align 8
@YCELLS = common dso_local global i64 0, align 8
@TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_9__*)* @MoveLargeCell to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @MoveLargeCell(%struct.TYPE_9__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_9__*, align 8
  %4 = alloca %struct.TYPE_8__, align 8
  store %struct.TYPE_9__* %0, %struct.TYPE_9__** %3, align 8
  %5 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %6 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %5, i32 0, i32 3
  %7 = load %struct.TYPE_7__*, %struct.TYPE_7__** %6, align 8
  %8 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %7, i32 0, i32 0
  %9 = call i32 @CopyRect(%struct.TYPE_8__* %4, i32* %8)
  %10 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %11 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %10, i32 0, i32 2
  %12 = load i32, i32* %11, align 8
  %13 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %14 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 4
  %16 = bitcast %struct.TYPE_8__* %4 to i32*
  %17 = call i32 @MapWindowPoints(i32 %12, i32 %15, i32* %16, i32 2)
  %18 = load i64, i64* @XLARGE, align 8
  %19 = load i64, i64* @XCELLS, align 8
  %20 = sub nsw i64 %18, %19
  %21 = load i64, i64* @YLARGE, align 8
  %22 = load i64, i64* @YCELLS, align 8
  %23 = sub nsw i64 %21, %22
  %24 = call i32 @InflateRect(%struct.TYPE_8__* %4, i64 %20, i64 %23)
  %25 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %26 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 8
  %28 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %4, i32 0, i32 2
  %29 = load i64, i64* %28, align 8
  %30 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %4, i32 0, i32 0
  %31 = load i64, i64* %30, align 8
  %32 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %4, i32 0, i32 3
  %33 = load i64, i64* %32, align 8
  %34 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %4, i32 0, i32 2
  %35 = load i64, i64* %34, align 8
  %36 = sub nsw i64 %33, %35
  %37 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %4, i32 0, i32 1
  %38 = load i64, i64* %37, align 8
  %39 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %4, i32 0, i32 0
  %40 = load i64, i64* %39, align 8
  %41 = sub nsw i64 %38, %40
  %42 = load i32, i32* @TRUE, align 4
  %43 = call i32 @MoveWindow(i32 %27, i64 %29, i64 %31, i64 %36, i64 %41, i32 %42)
  %44 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %45 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %44, i32 0, i32 0
  %46 = load i32, i32* %45, align 8
  %47 = load i32, i32* @TRUE, align 4
  %48 = call i32 @InvalidateRect(i32 %46, i32* null, i32 %47)
  %49 = load i32, i32* %2, align 4
  ret i32 %49
}

declare dso_local i32 @CopyRect(%struct.TYPE_8__*, i32*) #1

declare dso_local i32 @MapWindowPoints(i32, i32, i32*, i32) #1

declare dso_local i32 @InflateRect(%struct.TYPE_8__*, i64, i64) #1

declare dso_local i32 @MoveWindow(i32, i64, i64, i64, i64, i32) #1

declare dso_local i32 @InvalidateRect(i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
